--- a/css/file.css
+++ b/css/file.css
@@ -21,6 +21,23 @@ text-decoration: none;
 	padding:7px;
 	text-decoration: none;
 }
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
 .alignright{
 	padding-left: 850px;
 	text-decoration: none;
@@ -65,10 +82,69 @@ text-decoration: none;
   position: absolute;
   bottom: -692px;
   right: 209px;
-  background-color: black;
+  background-color: #928888;
   color: white;
   padding-left: 20px;
   padding-right: 20px;
   height:265px;
   width:400px;
 }
+.grid{
+display:grid;
+color: red;
+}
+.alig{
+display:grid;
+/*justify-content: space-around;*/
+grid-template-columns: 200px 200px 200px 200px ;
+grid-gap: 10px;
+margin-left: 150px;
+}
+.text{
+  font-size: 15px;
+  color: grey;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 24%;
+  width: 9%;
+  opacity: 0;
+  transition: .3s ease;
+  background-color: red;
+  
+}
+.fa-user:hover {
+  color: #eee;
+}
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.one{
+ /* border-style: ridge;*/
+  background-color: white;
+  height:100px;
+  padding: 50px;
+}
+.imgalign{
+  margin-left: 40px;
+  margin-top: -80px;
+  height:100px;
+  width:120px;
+  }
+.paralign{
+    margin-left: 170px;
+    margin-top: -80px;
+  }
+.background{
+  background-color: lightgrey;
+  padding:20px; 
+}
+.add{
+  height:800px;
+  width:100%;
+}  
